--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,5 @@
+@import "./_gallery.scss";
+
 body{
     font-size: 62.5%;
     padding: 0;
@@ -15,7 +17,7 @@ body{
 .gallery{
     position: absolute;
     outline-offset: 0.5rem;
-    height: 10rem;
+    height: 5rem;
     transition: all 0.3s;
 }
 .heart{
