--- a/style/style.scss
+++ b/style/style.scss
@@ -1,9 +1,9 @@
-// @import "./_gallery.scss";
-@import "./text";
-@import "./hot-chocolate";
-@import "./alaska";
-@import "./button";
-
+/// @import "./_gallery.scss";
+// @import "./_text.scss";
+@import"./_hot-chocolate.scss";
+/* @import "./_alaska.scss";
+@import "./_button.scss"; */
+ 
 body{
     font-size: 62.5%;
     padding: 0;
