--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,64 @@
+.gallery-parent {
+  height: 15rem;
+  width: 65rem;
+}
+
+.gallery-child {
+  position: relative;
+  margin: 5rem;
+}
+
+.gallery {
+  position: absolute;
+  outline-offset: 0.5rem;
+  height: 10rem;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.heart {
+  top: 8rem;
+  left: 47rem;
+}
+
+.winter {
+  left: 59rem;
+}
+
+.dog {
+  top: 2rem;
+  left: 36rem;
+}
+
+.gallery:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  outline: 0.5rem solid purple;
+  z-index: 1;
+}
+
+.gallery-child:hover .gallery:not(:hover) {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  opacity: 0.5;
+}
+
+.text-effect {
+  background-image: url("../media/background.jpg");
+  background-position: center;
+  color: transparent;
+  background-clip: text;
+  font-size: 5rem;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.text-effect:hover {
+  -webkit-transform: skewX(5deg);
+          transform: skewX(5deg);
+  letter-spacing: 3rem;
+}
+
 .chocolate {
   height: 10rem;
   -webkit-transition: all 0.3s;
@@ -15,7 +76,7 @@
 
 /* @import "./_alaska.scss";
 @import "./_button.scss"; */
-body {
+.container {
   font-size: 62.5%;
   padding: 0;
   margin: 0;
