--- a/style/style.scss
+++ b/style/style.scss
@@ -1,10 +1,10 @@
-/// @import "./_gallery.scss";
-// @import "./_text.scss";
+@import "./_gallery.scss";
+@import "./_text.scss";
 @import"./_hot-chocolate.scss";
 /* @import "./_alaska.scss";
 @import "./_button.scss"; */
  
-body{
+.container{
     font-size: 62.5%;
     padding: 0;
     margin: 0;
