--- a/style/style.scss
+++ b/style/style.scss
@@ -1,8 +1,8 @@
 @import "./_gallery.scss";
 @import "./_text.scss";
 @import"./_hot-chocolate.scss";
-/* @import "./_alaska.scss";
-@import "./_button.scss"; */
+@import "./_alaska.scss";
+//@import "./_button.scss";
  
 .container{
     font-size: 62.5%;
