--- a/style/style.css
+++ b/style/style.css
@@ -83,13 +83,35 @@
   height: 10rem;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .alaska-header {
   font-size: 2rem;
   opacity: 0;
-  color: white;
+  color: purple;
   position: absolute;
+  top: 100%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  text-transform: uppercase;
+}
+
+.alaska:hover .alaska-header {
+  opacity: 1;
+  top: 50%;
+}
+
+.alaska:hover .alaska-pic {
+  -webkit-filter: grayscale(80%);
+          filter: grayscale(80%);
 }
 
 .container {
