--- a/style/_alaska.scss
+++ b/style/_alaska.scss
@@ -5,10 +5,26 @@
 .alaska-pic{
     height: 10rem;
     transition: all 0.3s;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 .alaska-header{
     font-size: 2rem;
     opacity: 0;
-    color: white;
+    color: purple;
     position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    transition: all 0.2s;
+    text-transform: uppercase;
+}
+.alaska:hover .alaska-header{
+    opacity: 1;
+    top: 50%;
+}
+.alaska:hover .alaska-pic{
+    filter: grayscale(80%);
 }
