--- a/style/_button.scss
+++ b/style/_button.scss
@@ -1,6 +1,10 @@
 .button,
 .button:link,
 .button:visited{
+    text-decoration: none;
+    padding: 0.5rem 2rem;
+    display: inline-block;
+    margin: 1rem;
     font-size: 2rem;
     border-radius: 5rem;
     transition: all 0.3s;
@@ -10,10 +14,27 @@
 }
 .button:hover{
     transform: translateY(2px);
-    box-shadow: 0 5px 1rem rgba(color(black), 0.2)
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
 }
 .button::after{
-    //display: inline-block;
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
     border-radius: 5rem;
-    
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.3s;
+}
+.button:hover::after{
+    transform: translateY(1px);
+    transform: scaleX(2) scaleY(2);
+    box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.2);
+}
+.button-color,
+.button-color::after{    
+    background-color: purple;
+    color: white;
 }
