--- a/style/_text.scss
+++ b/style/_text.scss
@@ -1,5 +1,5 @@
 .text-effect{
-    background-image: url("../media/background.jpg");
+    background-image: url("../media/background3.jpg");
     background-position: center;
     color: transparent;
     background-clip: text;
