--- a/style/style.scss
+++ b/style/style.scss
@@ -2,11 +2,10 @@
 @import "./_text.scss";
 @import"./_hot-chocolate.scss";
 @import "./_alaska.scss";
-//@import "./_button.scss";
+@import "./_button.scss";
  
 .container{
     font-size: 62.5%;
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
 }
