--- a/style/style.scss
+++ b/style/style.scss
@@ -8,4 +8,8 @@
     font-size: 62.5%;
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
