--- a/style/_gallery.scss
+++ b/style/_gallery.scss
@@ -1,10 +1,11 @@
 .gallery-parent{
-    height: 20rem;
-    width: 65rem;
+    display: flex;
+    height: 18rem;
+    width: 100%;
+    padding: 2rem;
 }
 .gallery-child{
     position: relative;
-    margin: 5rem;
 }
 .gallery{
     position: absolute;
@@ -14,14 +15,14 @@
 }
 .heart{
     top: 8rem;
-    left: 47rem;
+    left: 39.5rem;
 }
 .winter{
-    left: 59rem;
+    left: 51.5rem;
 }
 .dog{
     top: 2rem;
-    left: 36rem;
+    left: 28.5rem;
 } 
 .gallery:hover {
     transform: scale(1.3);
