--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,7 @@
 @import"./_hot-chocolate.scss";
 @import "./_alaska.scss";
 @import "./_button.scss";
+@import "./_animation.scss";
  
 .container{
     font-size: 62.5%;
