--- a/style/_animation.scss
+++ b/style/_animation.scss
@@ -3,6 +3,7 @@ body{
 }
 
 @keyframes pulse{
-  0% {background-color: purple;}
-  100% {background-color: blue;}
+  0% {background-color:  #9E9E9E;}
+  50% {background-color: #6e5248;}
+  100% {background-color: #9E9E9E;}
 }
